# alpha_quat

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.json.example  pyproject.toml
.claude/skills/: alpha-quat.md
.github/workflows/: ci.yml
alpha_quat/analytics/: __init__.py  drawdown.py  metrics.py  returns.py
alpha_quat/backtest/: __init__.py  engine.py  result.py  timeline.py
alpha_quat/core/: __init__.py  events.py  exceptions.py  types.py
alpha_quat/data/: __init__.py  bars.py  feed.py
alpha_quat/data_sources/: __init__.py  base.py  index.py  stock.py
alpha_quat/execution/: __init__.py  costs.py  orders.py
alpha_quat/features/: __init__.py  base.py  technical.py
alpha_quat/portfolio/: __init__.py  portfolio.py  position.py
alpha_quat/strategy/: __init__.py  generator.py  signals.py
alpha_quat/tasks/: __init__.py  base.py  registry.py
alpha_quat/universe/: __init__.py  base.py  (+3 more)
backtest/: __init__.py  data.py  engine.py  metrics.py  order.py  portfolio.py  strategy.py  visualization.py
data_fetcher/: __init__.py  fetcher.py  sources.py  tushare_api.py  utils.py
docs/: CONTRIBUTING.md
examples/: __init__.py  backtest_mainboard.py  feature_engineering_example.py  test_multi_asset_backtest.py  test_turtle.py  test_visualization.py  turtle_strategy.py  universe_example.py
features/: __init__.py  base.py  pipeline.py  technical.py
scripts/: __init__.py  cli.py  daily_run.py  runner.py
tasks/: __init__.py  base.py  fetch_tasks.py  scheduler.py
tests/: test_cli.py  test_runner.py  test_tasks.py
(+51 files in other folders)
