[project]
name = "alpha-quat"
version = "0.1.0"
description = "Stock quantitative analysis tool based on Tushare data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tushare>=1.4.29",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.11",
    "pre-commit>=4.0.0",
    "mypy>=1.0.0",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false
no_implicit_optional = false
strict_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
